# ROS2_JuanManuel

./: .gitignore  README.md
Act3.4/puzzlebot_ros2/: README.md
Act3.4/puzzlebot_ros2/puzzlebot_description/launch/: puzzlebot_description.launch.py  puzzlebot_description.launch.xml
Act3.4/puzzlebot_ros2/puzzlebot_description/urdf/: puzzlebot.xacro
Act3.4/puzzlebot_ros2/puzzlebot_gazebo/: CMakeLists.txt  package.xml
Act3.4/puzzlebot_ros2/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.py
Act3.4/puzzlebot_ros2/puzzlebot_gazebo/scripts/: widen_maze.py
Act3.4/puzzlebot_ros2/puzzlebot_navigation2/: CMakeLists.txt  package.xml
Act3.4/puzzlebot_ros2/puzzlebot_navigation2/config/: nav2_params.yaml  slam_toolbox.yaml
Act3.4/puzzlebot_ros2/puzzlebot_navigation2/launch/: nav2.launch.py  slam.launch.py
puzzlebot_description/: package.xml
puzzlebot_description/rviz/: puzzlebot_description.rviz
puzzlebot_gazebo/: package.xml
puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.xml  puzzlebot_gazebo.launch.xml.save
puzzlebot_navigation2/: CMakeLists.txt  package.xml
puzzlebot_navigation2/config/: nav2_params.yaml  slam_toolbox.yaml
puzzlebot_navigation2/launch/: slam_core.launch.xml
puzzlebot_navigation2/maps/: map_maze.yaml
